# GA

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: CMakeLists.txt  GA.cpp  GA.hpp  Projection.cpp  Projection.hpp  Risk.cpp  Risk.hpp  ship.cpp  ship.hpp
